--- a/build.gradle
+++ b/build.gradle
@@ -61,6 +61,7 @@ dependencies {
 
     compile 'org.grails.plugins:spring-security-core:3.2.3'
     compile "org.grails.plugins:spring-security-rest:2.0.0.RC1"
+    compile 'com.github.jsimone:webapp-runner:8.5.11.3'
 
 }
 
@@ -82,5 +83,18 @@ assets {
     minifyJs = true
     minifyCss = true
 }
-task stage(dependsOn: 'bootJar') {
+
+task stage() {
+  dependsOn clean, war
 }
+war.mustRunAfter clean
+
+task copyToLib(type: Copy) {
+  into "$buildDir/server"
+  from(configurations.compile) {
+    include "webapp-runner*"
+  }
+}
+
+stage.dependsOn(copyToLib)
+
